# ga-optimized-trees

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: acc_enhance.yaml  accuracy_focused.yaml  balanced.yaml  custom.yaml  default.yaml  diverse.yaml  fast.yaml  interpretability_focused.yaml  optimized.yaml  paper.yaml  target.yaml
docs/: MIGRATION_GUIDE.md  README.md  SETUP_SUMMARY.md
docs/data/: dataset-loader.md
docs/examples/: custom-dataset.md
docs/getting-started/: Configuration.md  installation.md
docs/user-guides/: training.md
notebooks/: 01_quick_start.ipynb
results/optimization/: ga_opt_breast_cancer_20251128_195036_progress.json  ga_opt_breast_cancer_20251128_195036_report.json
results/statistics/: breast_cancer_dataset.xlsx  detailed_results.xlsx  iris_dataset.xlsx  wine_dataset.xlsx
results/tables/: paper-results.csv  results-accuracy_focused.csv  results-balanced.csv  results-fast.csv  results-interpretability-focused.csv  results-optimized.csv
scripts/: dataset_integration.py  experiment.py  experiment2.py  experiment3.py  hyperopt_with_optuna.py  prepare_professor_consultation.py  train.py  validate_setup.py  visualize_comprehensive.py
src/ga_trees/data/: dataset_loader.py
src/ga_trees/evaluation/: explainability.py
src/ga_trees/ga/: engine.py  improved_crossover.py
tests/: test_improved_crossover.py
tests/unit/: test_dataset_loader.py  test_improved_crossover.py
