[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ga-optimized-trees"
version = "1.0.0"
description = "Genetic Algorithm Framework for Evolving Interpretable Decision Trees"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ibrahem Hasaki", email = "ibrah5em@github.com"},
    {name = "LuF8y"}
]
maintainers = [
    {name = "Ibrahem Hasaki", email = "ibrah5em@github.com"}
]
keywords = [
    "genetic-algorithms",
    "decision-trees",
    "machine-learning",
    "interpretability",
    "multi-objective-optimization",
    "evolutionary-algorithms",
    "explainable-ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

# Core dependencies - REAL packages only
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "deap>=1.4.1",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
# Visualization dependencies
viz = [
    "graphviz>=0.20.0",
    "networkx>=3.1",
]

# Optimization and tracking
optimization = [
    "optuna>=3.4.0",
    "mlflow>=2.8.0",
]

# Baseline models for comparison
baselines = [
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
]

# Explainability tools (optional)
explainability = [
    "shap>=0.43.0",
    "lime>=0.2.0",
]

# API/Web interface (optional)
api = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]

# Documentation
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

# Complete installation (all optional dependencies)
all = [
    "ga-optimized-trees[viz,optimization,baselines,explainability,api]",
]

# Full development environment
full = [
    "ga-optimized-trees[all,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/ibrah5em/ga-optimized-trees"
Documentation = "https://github.com/ibrah5em/ga-optimized-trees/tree/main/docs"
Repository = "https://github.com/ibrah5em/ga-optimized-trees"
Issues = "https://github.com/ibrah5em/ga-optimized-trees/issues"
Changelog = "https://github.com/ibrah5em/ga-optimized-trees/blob/main/CHANGELOG.md"

[project.scripts]
ga-trees = "ga_trees.cli:main"
ga-train = "ga_trees.scripts.train:main"
ga-experiment = "ga_trees.scripts.experiment:main"

[tool.setuptools]
packages = ["ga_trees"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
ga_trees = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | experimental
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["experimental/*", "*.ipynb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src/ga_trees",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "requires_optuna: marks tests that require optuna",
    "requires_mlflow: marks tests that require mlflow",
    "requires_graphviz: marks tests that require graphviz",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
mypy_path = "src"
exclude = [
    "experimental/",
    "build/",
    "dist/",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/experimental/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "experimental",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/*" = ["B011"]  # assert False